--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "server" : "nodemon app.js"
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
   },
   "homepage": "https://github.com/moran711/mern#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.1",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5"
   },
   "devDependencies": {
